# disgrace

./: .gitignore  GEMINI.md  Makefile.am  README.md  Song.xml  a.r  b.t  b2.t  b3.t  b4.t  b5.t  b6.z  b7.z  configure.ac  copilot-instructions.md  disgrace.init  disgrace.layout  disgrace.plan  imp.csv  kbr.xml  nextimp.csv  test2  testp
examples/: Makefile.am  disgrace_song.dg
examples/disgrace_song/: song.json
src/: GEMINI.md  Makefile.am  main.cpp  test_main.cpp  test_wx  test_wx.cpp
src/analysis/: GEMINI.md  fft_analyzer.cpp  fft_analyzer.h  onset_detector.cpp  onset_detector.h  pitch_detector.h
src/audio/: GEMINI.md  adsr.h  audio_backend.h  beat_quantizer.cpp  beat_quantizer.h  jack_backend.cpp  jack_backend.h  null_backend.h  oss_backend.cpp  oss_backend.h  resampler.cpp  resampler.h  sample_buffer.cpp  sample_buffer.h  sample_data.h  sample_voice.cpp  sample_voice.h  timestretch.cpp  timestretch.h  voice.h
src/core/: GEMINI.md  MasterBus.cpp  app_info.h  audio_thread_pool.h  command.h  config_manager.cpp  config_manager.h  engine.cpp  engine.h  engine_command.h  engine_save.cpp  key_bindings.cpp  key_bindings.h  masterbus.cpp  masterbus.h  metronome.cpp  metronome.h  theme_types.h  transport.cpp  transport.h  undo_stack.cpp  undo_stack.h
src/dsp/: .dsp.h.kate-swp  GEMINI.md  cabinet.h  chorus.h  compressor.h  delay.h  distortion.h  dsp.h  dsp_chain.cpp  dsp_chain.h  echo.h  exciter.h  flanger.h  gain.h  gate.h  graphical_eq.h  limiter.h  mastering_filter.h  mastering_styles.h  phaser.h  reference_analyzer.cpp  reference_analyzer.h  reference_matcher.cpp  reference_matcher.h  reverb.h  ring_modulator.h  stereo_expander.h  vocoder.h
src/edit/: GEMINI.md  cmd_clear_block.h  cmd_edit_block.h  cmd_paste_block.h  cmd_set_note.h  cmd_track_copy.cpp  cmd_track_copy.h  cmd_track_cut.cpp  cmd_track_cut.h  cmd_track_insert_silence.cpp  cmd_track_insert_silence.h  cmd_track_paste.cpp  cmd_track_paste.h  cmd_track_silence.cpp  cmd_track_silence.h  edit_command.h  undo_stack.h
src/gui/: GEMINI.md  TransportBar.cpp  detached_window.cpp  detached_window.h  instrument_panel.cpp  instrument_panel.h  main_window.cpp  main_window.h  main_window.h.bak  mixer_panel.cpp  mixer_panel.h  notation_panel.cpp  notation_panel.h  project_panel.cpp  project_panel.h  settings_panel.cpp  settings_panel.h  spectral_view.cpp  spectral_view.h  tab_help.cpp  tab_instrument.cpp  tab_mixer.cpp  tab_notation.cpp  tab_project.cpp  tab_settings.cpp  tab_tracker.cpp  tab_tracks.cpp  theme.cpp  theme.h  tracker_panel.cpp  tracker_panel.h  tracker_view.cpp  tracker_view.h  tracker_widget.cpp  tracker_widget.h  tracks_panel.cpp  tracks_panel.h  transport_panel.cpp  transport_panel.h  transportbar.cpp  (+39 more)
src/gui/model/: mixer_model.cpp  mixer_model.h
src/instrument/: GEMINI.md  dssi_bridge_shm.h  dssi_instrument.cpp  dssi_instrument.h  dssi_sandbox_main.cpp  instrument.cpp  instrument.h  instrument_rack.cpp  instrument_rack.h  lv2_instrument.cpp  lv2_instrument.h  midi_instrument.cpp  midi_instrument.h  sample_instrument.cpp  sample_instrument.h  sfz_instrument.cpp  sfz_instrument.h  soundfont_instrument.cpp  soundfont_instrument.h  voice_instrument.cpp  voice_instrument.h  voice_synthesis_worker.cpp  voice_synthesis_worker.h  xrni_instrument.cpp  xrni_instrument.h
src/io/: GEMINI.md  audio_file.cpp  audio_file.h  lilypond_exporter.cpp  lilypond_exporter.h  project_archive.cpp  project_archive.h  song_serializer.cpp  song_serializer.h  xrns_importer.cpp  xrns_importer.h
src/midi/: GEMINI.md  MidiInput.cpp  MidiInput.h  midi_input.cpp  midi_input.h  midi_queue.h
src/mixer/: GEMINI.md  mixer_bus.cpp  mixer_bus.h  track.cpp  track.h  track_clipboard.cpp  track_clipboard.h
src/sequencer/: GEMINI.md  automation.cpp  automation.h  note.h  pattern.cpp  pattern.h  sequencer.cpp  sequencer.h  timing.cpp  timing.h
src/util/: GEMINI.md  linear_smoother.h  ringbuffer.h
